tests/ui/iterators/string.stderr
error[E0277]: the trait `IntoIterator` is not implemented for `String`
  --> $DIR/string.rs:2:14
   |
LL |     for _ in "".to_owned() {}
   |              ^^^^^^^^^^^^^ the trait `IntoIterator` is not implemented for `String`, which is required by `String: IntoIterator`
   |
   = note: required for `String` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `&str`
  --> $DIR/string.rs:4:14
   |
LL |     for _ in "" {}
   |              ^^ the trait `IntoIterator` is not implemented for `&str`, which is required by `&str: IntoIterator`
   |
   = note: required for `&str` to implement `IntoIterator`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
